--- a/JHPhotoDemo/Podfile
+++ b/JHPhotoDemo/Podfile
@@ -2,6 +2,6 @@ platform :ios, '8.0'
 
 target 'JHPhotoDemo' do
 
-# pod 'Reveal-SDK', :configurations => ['Debug']
+pod 'Reveal-SDK', :configurations => ['Debug']
 
 end
